# OOP_Assignment1

./: .gitignore  CMakeLists.txt  Command  GROUP3_PROJECT_REPORT.docx  Inpatient.h  Patient.cpp  Patient.h  Project 1 (Hospital Management System).docx  Project_Report_Template.docx  README.md  README.txt  UML_class_diagram.drawio  hospital_data.txt
header/: MedStaff.h  Outpatient.h  appointment.h  inpatient.h  invalidAgeException.h  med_staff.h  patient.h
src/: Medicalstaff.cpp  Outpatient.cpp  appointment.cpp  inpatient.cpp  invalidAgeException.cpp  main.cpp  main.our  patient.cpp
test/: inpatient_test.cpp  main.cpp  med_staff_test.cpp  patient_test.cpp
